force-app/main/default/objects/clariti__CartItem__c/clariti__CartItem__c.object-meta.xml
<CustomObject>
    <description>Cart Item is used to process payment for individual payable items e.g. Fees, Deposits, Invoices, etc.</description>
    <label>Cart Item</label>
    <nameField>
        <displayFormat>CI-{000000}</displayFormat>
        <label>Cart Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cart Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>