force-app/main/default/objects/clariti__CartItem__c/fields/clariti__Cart__c.field-meta.xml
<CustomField>
    <fullName>clariti__Cart__c</fullName>
    <description>Lookup to the cart with which the cart item is associated.</description>
    <label>Cart</label>
    <referenceTo>clariti__Cart__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>CartItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>