force-app/main/default/objects/clariti__CartItem__c/fields/clariti__Fee__c.field-meta.xml
<CustomField>
    <fullName>clariti__Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the associated fee record.</description>
    <label>Fee</label>
    <referenceTo>MUSW__Fee__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>CartItems</relationshipName>
    <type>Lookup</type>
</CustomField>