force-app/main/default/objects/clariti__CartItem__c/fields/clariti__OutstandingAmount__c.field-meta.xml
<CustomField>
    <fullName>clariti__OutstandingAmount__c</fullName>
    <description>Amount that is outstanding for the cart item.</description>
    <label>Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>