force-app/main/default/objects/clariti__CartItem__c/fields/clariti__PaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>clariti__PaymentAmount__c</fullName>
    <description>Payment Amount collected for the cart item.</description>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>